# hike-planner-uk

./: .gitignore  README.md  pyproject.toml
data/: wessexridgeway.gpx
docs/: dependencies.txt
scripts/: load_map_data.py
src/hikeplanner/: __init__.py  _settings.py  config.yaml  settings.py
