[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hike-planner-uk"
version = "0.0.1"
authors = [
  { name="Joseph Huard-Cox", email="joehuard2711@gmail.com" },
  { name="Evie Brown", email="evie4605@gmail.com" }
]
description = "A product to help plan multiday hiking routes"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "aiohttp-retry==2.8.3",
  "aiohttp==3.8.4",
  "aiosignal==1.3.1",
  "altair==4.2.2",
  "amqp==5.1.1",
  "antlr4-python3-runtime==4.9.3",
  "appdirs==1.4.4",
  "asttokens==2.2.1",
  "async-timeout==4.0.2",
  "asyncssh==2.13.1",
  "atpublic==3.0.1",
  "attrs==23.1.0",
  "backcall==0.2.0",
  "backports.functools-lru-cache==1.6.4",
  "billiard==3.6.4.0",
  "blinker==1.6.2",
  "brotlipy==0.7.0",
  "cachetools==5.3.0",
  "celery==5.2.7",
  "certifi==2023.5.7",
  "cffi==1.15.1",
  "charset-normalizer==3.1.0",
  "click-didyoumean==0.3.0",
  "click-plugins==1.1.1",
  "click-repl==0.2.0",
  "click==8.1.3",
  "colorama==0.4.6",
  "configobj==5.0.8",
  "cryptography==38.0.4",
  "debugpy==1.5.1",
  "decorator==5.1.1",
  "dictdiffer==0.9.0",
  "diskcache==5.6.1",
  "distro==1.8.0",
  "dpath==2.1.5",
  "dulwich==0.21.5",
  "dvc-data==0.51.0",
  "dvc-http==2.30.2",
  "dvc-objects==0.22.0",
  "dvc-render==0.5.3",
  "dvc-studio-client==0.9.2",
  "dvc-task==0.2.1",
  "dvc==2.57.2",
  "editables==0.3",
  "entrypoints==0.4",
  "executing==1.2.0",
  "filelock==3.12.0",
  "flatten-dict==0.4.2",
  "flufl.lock==7.1",
  "frozenlist==1.3.3",
  "fsspec==2023.5.0",
  "funcy==2.0",
  "future==0.18.3",
  "gitdb==4.0.10",
  "gitpython==3.1.31",
  "gpxpy==1.5.0",
  "grandalf==0.7",
  "gssapi==1.8.2",
  "hatchling==1.18.0",
  "hydra-core==1.3.2",
  "idna==3.4",
  "importlib-metadata==6.6.0",
  "importlib-resources==5.12.0",
  "ipykernel==6.15.0",
  "ipython==8.13.2",
  "iterative-telemetry==0.0.8",
  "jedi==0.18.2",
  "jinja2==3.1.2",
  "jsonschema==4.17.3",
  "jupyter-client==8.2.0",
  "jupyter-core==5.3.0",
  "kombu==5.2.4",
  "markdown-it-py==2.2.0",
  "markupsafe==2.1.2",
  "matplotlib-inline==0.1.6",
  "mdurl==0.1.2",
  "multidict==6.0.4",
  "nanotime==0.5.2",
  "nest-asyncio==1.5.6",
  "networkx==3.1",
  "numpy==1.24.3",
  "omegaconf==2.3.0",
  "orjson==3.8.12",
  "packaging==23.1",
  "pandas==2.0.1",
  "parso==0.8.3",
  "pathlib2==2.3.7.post1",
  "pathspec==0.11.1",
  "pickleshare==0.7.5",
  "pillow==9.5.0",
  "pip==23.0.1",
  "platformdirs==3.5.0",
  "pluggy==1.1.0",
  "prompt-toolkit==3.0.38",
  "protobuf==3.20.3",
  "psutil==5.9.0",
  "pure-eval==0.2.2",
  "pyarrow==12.0.0",
  "pycparser==2.21",
  "pydeck==0.8.1b0",
  "pydot==1.4.2",
  "pygit2==1.12.1",
  "pygments==2.15.1",
  "pygtrie==2.5.0",
  "pympler==1.0.1",
  "pyopenssl==23.1.1",
  "pyparsing==3.0.9",
  "pyrsistent==0.19.3",
  "pysocks==1.7.1",
  "python-dateutil==2.8.2",
  "python-dotenv==1.0.0",
  "pytz==2023.3",
  "pywin32==305.1",
  "pyyaml==6.0",
  "pyzmq==25.0.2",
  "requests==2.30.0",
  "rich==13.3.5",
  "ruamel.yaml.clib==0.2.7",
  "ruamel.yaml==0.17.26",
  "scmrepo==1.0.3",
  "setuptools==65.6.3",
  "shortuuid==1.0.11",
  "shtab==1.6.1",
  "six==1.16.0",
  "smmap==5.0.0",
  "sqltrie==0.3.1",
  "stack-data==0.6.2",
  "streamlit==1.22.0",
  "tabulate==0.9.0",
  "tenacity==8.2.2",
  "toml==0.10.2",
  "tomli==2.0.1",
  "tomlkit==0.11.8",
  "toolz==0.12.0",
  "tornado==6.2",
  "tqdm==4.65.0",
  "traitlets==5.9.0",
  "trove-classifiers==2023.5.24",
  "typing-extensions==4.5.0",
  "tzdata==2023.3",
  "tzlocal==5.0.1",
  "urllib3==2.0.2",
  "validators==0.20.0",
  "vine==5.0.0",
  "voluptuous==0.13.1",
  "watchdog==3.0.0",
  "wcwidth==0.2.6",
  "wheel==0.38.4",
  "win-inet-pton==1.1.0",
  "wincertstore==0.2",
  "yarl==1.9.1",
  "zc.lockfile==3.0.post1",
  "zipp==3.15.0"
]